--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "api-backend",
-  "version": "7.0.1",
-  "private": true,
-  "scripts": {
-    "start": "supervisor ./bin/www",
-    "node --inspect-brk": "node --inspect-brk ./bin/www"
-  },
+  "name": "lilrook-game-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.ts",
   "dependencies": {
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "mongoose": "5.13.8",
+    "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8",
     "tsc": "^2.0.4"
-  }
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.23",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  },
+  "scripts": {
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "npx tsc --project ./",
+    "start": "node ./dist/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
