--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mongoose": "5.13.8",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
