--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build1": "npx tsc --project ./",
-    "start": "nodemon --exec ts-node src/index.ts"
+    "build1": "npx tsc --project .",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
