--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "build": "npx tsc --project .",
     "start": "node dist/index.js"
   },
+  "engines": {
+    "npm": "6.13.4",
+    "node": "12.15.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
