--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "dependencies": {
     "express": "^4.17.3",
-
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "mongoose": "5.13.8",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
@@ -24,8 +25,8 @@
     "start": "node dist/index.js"
   },
   "engines": {
-    "npm": "6.13.4",
-    "node": "12.15.0"
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "",
