--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "start": "node dist/index.js"
   },
   "engines": {
-    "npm": ">=7.0.0",
-    "node": ">=16.0.0"
+    "npm": "6.13.4",
+    "node": "12.15.0"
   },
   "keywords": [],
   "author": "",
