--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "npx tsc --project .",
-    "start": "node dist/index.js"
+    "start": "ts-node-dev --project tsconfig.json src/index.ts"
   },
 
   "keywords": [],
