add deployment details

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "build": "npx tsc --project .",
     "start": "ts-node-dev --project tsconfig.json src/index.ts"
   },
-
+  "engines": {
+    "npm": "8.5.0",
+    "node": "16.14.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
