--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build1": "npx tsc --project .",
     "build": "tsc --project .",
-    "start": "ts-node-dev --project tsconfig.json src/index.ts",
-    "start-local": "node ./dist/index.js"
+    "start-local": "ts-node-dev --project tsconfig.json src/index.ts",
+    "start": "node ./dist/index.js"
   },
   "engines": {
     "npm": "8.5.0",
