--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "mongoose": "6.3.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.23",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
+    "@types/express": "4.17.13",
+    "@types/node": "17.0.23",
+    "nodemon": "2.0.15",
+    "ts-node": "10.7.0",
+    "ts-node-dev": "1.1.8",
     "typescript": "4.6.3"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build1": "npx tsc --project .",
     "build": "tsc --project .",
-    "start-local": "ts-node-dev --project tsconfig.json src/index.ts",
-    "start": "node ./dist/index.js"
+    "start-local": "ts-node-dev --project tsconfig.json src/index.ts"
   },
   "engines": {
     "npm": "8.5.0",
