--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
   "dependencies": {
     "@types/express": "4.17.13",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
     "mongoose": "6.3.0"
   },
+  "private": true,
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/node": "17.0.23",
+    "node-modules-prod": "1.0.2",
     "nodemon": "2.0.15",
     "ts-node": "10.7.0",
+    "graphql": "^15.8.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.6.3"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build1": "npx tsc --project .",
-    "build": "tsc --project .",
+    "build2": "tsc --project .",
     "start-local": "ts-node-dev --project tsconfig.json src/index.ts",
-    "start": "PROD=true node index.js"
+    "start-local1": "ts-node --transpile-only ./src/start.ts",
+    "start": "ts-node --transpile-only ./src/index.ts"
   },
   "engines": {
     "npm": "8.5.0",
@@ -32,4 +35,3 @@
   "author": "",
   "license": "ISC"
 }
-
