--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@types/express": "4.17.13",
     "express-graphql": "^0.12.0",
-    "mongoose": "6.3.0"
+    "mongoose": "6.3.0",
+    "ts-node": "10.7.0"
   },
   "private": true,
   "devDependencies": {
