--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "@types/express": "4.17.13",
     "express-graphql": "^0.12.0",
-    "mongoose": "6.3.0",
-    "ts-node": "10.7.0"
+    "mongoose": "6.3.0"
 
   },
   "private": true,
@@ -31,7 +30,8 @@
   },
   "engines": {
     "npm": "8.5.0",
-    "node": "16.14.2"
+    "node": "16.14.2",
+    "ts-node": "10.7.0"
   },
   "keywords": [],
   "author": "",
