--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/express": "4.17.13",
     "express-graphql": "^0.12.0",
     "mongoose": "6.3.0",
-    "ts-node": "~10.7.0"
+    "ts-node": "10.7.0"
 
   },
   "private": true,
@@ -16,7 +16,6 @@
     "@types/node": "17.0.23",
     "node-modules-prod": "1.0.2",
     "nodemon": "2.0.15",
-    "ts-node": "10.7.0",
     "graphql": "^15.8.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.6.3"
