--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "express": "4.17.3",
     "express-graphql": "^0.12.0",
     "mongoose": "6.3.0",
-    "ts-node": "10.7.0"
-
+    "ts-node": "10.7.0",
+    "cors": "2.8.5"
   },
   "private": true,
   "devDependencies": {
