--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "src/index.ts",
   "dependencies": {
+    "cors": "2.8.5",
+    "dotenv": "10.0.0",
+    "discord.js": "13.3.1",
     "express": "4.17.3",
     "express-graphql": "^0.12.0",
     "mongoose": "6.3.0",
-    "ts-node": "10.7.0",
-    "cors": "2.8.5"
+    "moralis": "1.7.0",
+    "rxjs": "7.5.5",
+    "ts-node": "10.7.0"
   },
   "private": true,
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "17.0.23",
     "node-modules-prod": "1.0.2",
     "nodemon": "2.0.15",
-    "graphql": "^15.8.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.6.3"
   },
