--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
     "node-modules-prod": "1.0.2",
     "nodemon": "2.0.15",
     "ts-node-dev": "1.1.8",
-    "typescript": "4.6.3"
+    "typescript": "4.6.3",
+    "@types/jest": "27.4.1",
+    "jest": "27.5.1",
+    "jest-express": "1.12.0",
+    "ts-jest": "27.1.4",
+    "@types/supertest": "2.0.12",
+    "supertest": "6.2.2"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build1": "npx tsc --project .",
     "build2": "tsc --project .",
+    "test": "jest",
     "start-local": "ts-node-dev --project tsconfig.json src/index.ts",
     "start-local1": "ts-node --transpile-only ./src/start.ts",
     "start": "ts-node --transpile-only ./src/index.ts"
