--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build1": "npx tsc --project .",
-    "build2": "tsc --project .",
+    "build": "tsc --project .",
     "test": "jest",
+    "start-build": "node ./dist/index.js",
     "start-local": "ts-node-dev --project tsconfig.json src/index.ts",
     "start-local1": "ts-node --transpile-only ./src/start.ts",
-    "start": "ts-node --transpile-only ./src/index.ts"
+    "start": "node ./build/index.js"
   },
   "engines": {
     "npm": "8.1.2",
