add env variable details

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
+    "local-dev": "tsc .",
     "build1": "npx tsc --project .",
     "build": "tsc --project .",
+    "build-src": "tsc --project .",
     "test": "jest",
     "start-build": "node ./dist/index.js",
     "start-local": "ts-node-dev --project tsconfig.json src/index.ts",
-    "start-local1": "ts-node --transpile-only ./src/start.ts",
+    "start-local1": "ts-node --transpile-only ./src/index.ts",
     "start": "node ./build/index.js"
   },
   "engines": {
