moralis start with app start

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT= #Starting port should go here
-MORALIS_APP_ID= #Moralis App Id should go here
-MORALIS_SERVER_URL= #Moralis server URL should go here
-MASTER_KEY= #Moaralis Master key should go here
+PORT=6000
+MORALIS_APP_ID=b7cTHjuYvIPoMjIdN8bBaUOvhKCr2ARGTek8UWCO
+MORALIS_SERVER_URL=https://ujwkj69jqehg.usemoralis.com:2053/server
+MASTER_KEY=XnXh90R9K4do0yFp4mXLv5lE3PKM7yHon1x7Dg4K
